# jherrylib

./: .gitignore  meson.build
.cache/clangd/index/: Ball.cpp.863E889D4D119409.idx  Ball.h.B7C2245EB53B3E44.idx  Paddle.cpp.8224BC61B252B606.idx  Paddle.h.A1417B5CBB04BDA0.idx  audio.cpp.2867DDE3C9C9F8D6.idx  constants.h.42171D39D407E977.idx  defs.h.730B83EF7EDA9F12.idx  engine.cpp.3E4B5946D2567A90.idx  engine.h.06A19E6FE301D118.idx  font.cpp.AD976F95BB0F71DE.idx  graphics.cpp.72D0CAF5A1D1F054.idx  keys.h.DB8D9F7C89BC823D.idx  main.cpp.126B4BC9E75FA5EF.idx  main.h.359981D5B67054D0.idx  plugin.cpp.F901A592CCA6A812.idx  plugin.h.7CC80BBC9FD7E344.idx  plugin_posix.cpp.956B8CC0ED9E3CB7.idx  renderer.cpp.562DF8E734594F6B.idx  seek.h.C762D1DE882B3C8B.idx  sound.cpp.470C51989B2E7C6C.idx  tahm.cpp.EEDDFBC3BB163FCA.idx  tahm.h.E6BEAC7D47AA1347.idx  test.cpp.52DD5D43825D39BE.idx  util.cpp.D1795E9657BFEE97.idx  util.h.EA3F79AED0A5B566.idx  utils.cpp.8E9FAB8B83DA1361.idx  utils.h.D99163EEEEE67622.idx  window.cpp.886A1D4614963DDC.idx
tahm/: engine.cpp  engine.h  main.cpp  test.cpp
tahm/src/: Ball.cpp  Paddle.cpp  Paddle.h  constants.h
tahm/tahm/: audio.cpp  defs.h  graphics.cpp  renderer.cpp  seek.h  tahm.cpp  tahm.h  util.cpp  window.cpp
tahm/tahm/platform/plugin/: plugin_posix.cpp
